--- a/ZhouZhenWuAllDemoApplication/app/src/main/res/layout/adapter_item_main_activity_list.xml
+++ b/ZhouZhenWuAllDemoApplication/app/src/main/res/layout/adapter_item_main_activity_list.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/tv_name"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="50dp"
+        android:layout_centerInParent="true"
         android:gravity="center"
-        android:text="我是MainActivityListView的Adapter" />
-</LinearLayout>
+        android:text="我是MainActivityListView的Adapter"
+        android:textColor="@color/colorAccent"
+        android:textSize="15sp" />
+</RelativeLayout>
