--- a/ZhouZhenWuAllDemoApplication/app/src/main/res/layout/adapter_item_activity_list.xml
+++ b/ZhouZhenWuAllDemoApplication/app/src/main/res/layout/adapter_item_activity_list.xml
@@ -9,7 +9,7 @@
         android:layout_height="50dp"
         android:layout_centerInParent="true"
         android:gravity="center"
-        android:text="我是MainActivityListView的Adapter"
+        android:text="我是展示ActivityListView的Adapter"
         android:textColor="@color/colorAccent"
         android:textSize="15sp" />
 </RelativeLayout>
