--- a/ZhouZhenWuAllDemoApplication/app/src/main/res/layout/activity_expandable_recycle_view.xml
+++ b/ZhouZhenWuAllDemoApplication/app/src/main/res/layout/activity_expandable_recycle_view.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="30dp"
+    android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycle_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="标题"
-        android:textColor="@color/colorAccent"
-        android:textSize="14sp" />
+        android:scrollbars="none" />
+
 </LinearLayout>
