--- a/ZhouZhenWuAllDemoApplication/app/src/main/res/layout/adapter_item_activity_list.xml
+++ b/ZhouZhenWuAllDemoApplication/app/src/main/res/layout/adapter_item_activity_list.xml
@@ -8,7 +8,9 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_centerInParent="true"
+        android:background="@drawable/activity_item_selecter"
         android:gravity="center"
+        android:layout_marginTop="0.5dp"
         android:text="我是展示ActivityListView的Adapter"
         android:textColor="@color/colorAccent"
         android:textSize="15sp" />
