--- a/ZhouZhenWuAllDemoApplication/app/src/main/res/anim/alpha_scale.xml
+++ b/ZhouZhenWuAllDemoApplication/app/src/main/res/anim/alpha_scale.xml
@@ -1,30 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set
-xmlns:android="http://schemas.android.com/apk/res/android"
-android:shareInterpolator="false"
->
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+    android:duration="1000"
+    android:shareInterpolator="false">
     <alpha
-        android:interpolator="@android:res/anim/accelerate_decelerate_interpolator"
         android:fromAlpha="0.0"
-        android:toAlpha="1.0"
-        android:duration="500"
-        android:repeatCount="0"
-
-    >
-    </alpha>
-    <scale
         android:interpolator="@android:res/anim/accelerate_decelerate_interpolator"
+        android:repeatCount="0"
+        android:toAlpha="1.0" />
+    <scale
         android:fromXScale="1.0"
-        android:toXScale="0.5"
-        
         android:fromYScale="1.0"
-        android:toYScale="1.4"
-        
+        android:interpolator="@android:res/anim/accelerate_decelerate_interpolator"
         android:pivotX="50%"
         android:pivotY="50%"
-        android:duration="500"
         android:repeatCount="0"
         android:startOffset="500"
-    ></scale>
-    
+        android:toXScale="0.1"
+        android:toYScale="1.8"></scale>
+
 </set>
