--- a/ZhouZhenWuAllDemoApplication/app/src/main/res/anim/alpha_translate.xml
+++ b/ZhouZhenWuAllDemoApplication/app/src/main/res/anim/alpha_translate.xml
@@ -1,24 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set
-xmlns:android="http://schemas.android.com/apk/res/android"
-android:shareInterpolator="false"
->
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shareInterpolator="false">
     <alpha
-        android:interpolator="@android:res/anim/accelerate_decelerate_interpolator"
+        android:duration="2000"
         android:fromAlpha="0.0"
-        android:toAlpha="1.0"
-        android:duration="2000"
+        android:interpolator="@android:anim/accelerate_decelerate_interpolator"
         android:repeatCount="0"
+        android:toAlpha="1.0" />
 
-    >
-    </alpha>
-    
     <translate
-        android:fromXDelta="30"
-        android:toXDelta="-80"
-        android:fromYDelta="30"
-        android:toYDelta="300"
         android:duration="2000"
-        />
-        
+        android:fromXDelta="-230"
+        android:fromYDelta="130"
+        android:toXDelta="0"
+        android:toYDelta="0" />
+
 </set>
