--- a/ZhouZhenWuAllDemoApplication/app/src/main/res/anim/alpha_translate_rotate.xml
+++ b/ZhouZhenWuAllDemoApplication/app/src/main/res/anim/alpha_translate_rotate.xml
@@ -1,32 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set
-xmlns:android="http://schemas.android.com/apk/res/android"
-android:shareInterpolator="false"
->
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shareInterpolator="false">
     <alpha
-        android:interpolator="@android:res/anim/accelerate_decelerate_interpolator"
+        android:duration="3000"
         android:fromAlpha="0.0"
-        android:toAlpha="1.0"
+        android:interpolator="@android:anim/accelerate_decelerate_interpolator"
+        android:toAlpha="1.0" />
+
+    <translate
         android:duration="3000"
-    >
-    </alpha>
-    
-    
-       <translate
-        android:interpolator="@android:anim/accelerate_decelerate_interpolator" 
         android:fromXDelta="120"
-        android:toXDelta="30"
-        android:fromYDelta="30"
-        android:toYDelta="250"
-        android:duration="3000"
-        />
-        
-        <rotate 
-        android:interpolator="@android:anim/accelerate_decelerate_interpolator"     
-        android:fromDegrees="0" 
-        android:toDegrees="+360"         
-        android:pivotX="50%" 
-        android:pivotY="50%"   
-        android:startOffset="800"      
-        android:duration="5000" />
+        android:fromYDelta="300"
+        android:interpolator="@android:anim/accelerate_decelerate_interpolator"
+        android:toXDelta="0"
+        android:toYDelta="0" />
+
+    <rotate
+        android:duration="2000"
+        android:fromDegrees="0"
+        android:interpolator="@android:anim/accelerate_decelerate_interpolator"
+        android:pivotX="50%"
+        android:pivotY="50%"
+        android:startOffset="3000"
+        android:toDegrees="+360" />
 </set>
