--- a/ZhouZhenWuAllDemoApplication/app/src/main/res/anim/drawroll_ani_in.xml
+++ b/ZhouZhenWuAllDemoApplication/app/src/main/res/anim/drawroll_ani_in.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android"
-	android:oneshot="true"
-	>
-	<translate android:interpolator="@android:anim/accelerate_decelerate_interpolator"
-		android:fromYDelta="0"
-		android:toYDelta="100"
-		android:duration="1000" 
-		android:fillEnabled="true"
-		android:fillAfter="true"
-		/>
-	<alpha
-		android:fromAlpha="0.0" 
-		android:toAlpha="1.0" 
-		android:duration="1000" 
-		/>
+    android:oneshot="true">
+    <translate
+        android:duration="1000"
+        android:fillAfter="true"
+        android:fillEnabled="true"
+        android:fromYDelta="-200"
+        android:interpolator="@android:anim/accelerate_decelerate_interpolator"
+        android:toYDelta="0" />
+    <alpha
+        android:duration="1000"
+        android:fromAlpha="0.0"
+        android:toAlpha="1.0" />
 </set>
