--- a/ZhouZhenWuAllDemoApplication/app/src/main/res/anim/fade.xml
+++ b/ZhouZhenWuAllDemoApplication/app/src/main/res/anim/fade.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2007 The Android Open Source Project
+<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2007 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -12,9 +11,9 @@
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
      See the License for the specific language governing permissions and
      limitations under the License.
--->
-<!-- android:duration="@android:integer/config_longAnimTime" -->
+--><!-- android:duration="@android:integer/config_longAnimTime" -->
 <alpha xmlns:android="http://schemas.android.com/apk/res/android"
-       android:interpolator="@android:anim/accelerate_interpolator"
-       android:fromAlpha="0.0" android:toAlpha="1.0"
-       android:duration="2000" />
+    android:duration="2000"
+    android:fromAlpha="0.0"
+    android:interpolator="@android:anim/accelerate_interpolator"
+    android:toAlpha="1.0" />
