--- a/ZhouZhenWuAllDemoApplication/app/src/main/res/anim/hyperspace_in.xml
+++ b/ZhouZhenWuAllDemoApplication/app/src/main/res/anim/hyperspace_in.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2007 The Android Open Source Project
+<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2007 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -14,4 +13,35 @@
      limitations under the License.
 -->
 
-<alpha xmlns:android="http://schemas.android.com/apk/res/android" android:fromAlpha="0.0" android:toAlpha="1.0" android:duration="2000" android:startOffset="1200" />
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shareInterpolator="false">
+    <scale
+        android:duration="2000"
+        android:fromXScale="0"
+        android:fromYScale="0"
+        android:pivotX="50%"
+        android:pivotY="50%"
+        android:toXScale="1.0"
+        android:toYScale="1.0" />
+    <rotate
+        android:duration="2000"
+        android:fromDegrees="-45"
+        android:pivotX="50%"
+        android:pivotY="50%"
+        android:toDegrees="0"
+        android:toYScale="0.0" />
+    <set
+        android:interpolator="@android:anim/accelerate_interpolator"
+        android:startOffset="700">
+        <scale
+            android:duration="2000"
+            android:fillAfter="false"
+            android:fromXScale="1.4"
+            android:fromYScale="0.6"
+            android:interpolator="@android:anim/accelerate_decelerate_interpolator"
+            android:pivotX="50%"
+            android:pivotY="50%"
+            android:toXScale="1.0"
+            android:toYScale="1.0" />
+    </set>
+</set>
