--- a/ZhouZhenWuAllDemoApplication/app/src/main/res/drawable/aaa_progress_horizontal.xml
+++ b/ZhouZhenWuAllDemoApplication/app/src/main/res/drawable/aaa_progress_horizontal.xml
@@ -13,13 +13,13 @@
 
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-	<item android:id="@android:id/background" android:drawable="@drawable/progressbar_indeter1">
+	<item android:id="@android:id/background" android:drawable="@mipmap/progressbar_back">
 	</item>
 
-	<item android:id="@android:id/secondaryProgress" android:drawable="@drawable/progressbar_indeter2">
+	<item android:id="@android:id/secondaryProgress" android:drawable="@mipmap/progressbar_indeter2">
 	</item>
 
-	<item android:id="@android:id/progress" android:drawable="@drawable/progressbar_back">
+	<item android:id="@android:id/progress" android:drawable="@mipmap/progressbar_indeter1">
 	</item>
 
 </layer-list>
