--- a/ZhouZhenWuAllDemoApplication/app/src/main/res/values/styles.xml
+++ b/ZhouZhenWuAllDemoApplication/app/src/main/res/values/styles.xml
@@ -32,4 +32,13 @@
         <attr name="currentPointColor" format="color" />
         <attr name="currentPointRadius" format="float" />
     </declare-styleable>
+
+    <!--百分比展示控件-->
+    <declare-styleable name="PercentTextView">
+        <attr name="back_paint_color" format="color" />
+        <attr name="back_paint_alpha" format="integer" />
+        <attr name="percent_paint_color" format="color" />
+        <attr name="percent_paint_alpha" format="integer" />
+        <attr name="paint_stoke_width" format="float" />
+    </declare-styleable>
 </resources>
