--- a/ZhouZhenWuAllDemoApplication/app/src/main/res/layout/activity_camera_3d_animation.xml
+++ b/ZhouZhenWuAllDemoApplication/app/src/main/res/layout/activity_camera_3d_animation.xml
@@ -7,7 +7,7 @@
     <study.zhouzhenwu.com.mydemo.common.widgets.ClockView
         android:id="@+id/clock_view"
         android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:layout_centerInParent="true" />
+        android:layout_marginRight="50dp"
+        android:layout_height="300dp"/>
 
 </RelativeLayout>
