--- a/ZhouZhenWuAllDemoApplication/app/src/main/res/anim/rotate.xml
+++ b/ZhouZhenWuAllDemoApplication/app/src/main/res/anim/rotate.xml
@@ -12,7 +12,7 @@
          
         android:duration="3000" />
         
-<!-- rotate 旋转动画效果
+<!-- turnLeft 旋转动画效果
 
 
        属性：interpolator 指定一个动画的插入器
