日常代码更新

--- a/ZhouZhenWuAllDemoApplication/app/src/main/res/layout/my_recycle_view_item_layout.xml
+++ b/ZhouZhenWuAllDemoApplication/app/src/main/res/layout/my_recycle_view_item_layout.xml
@@ -10,6 +10,7 @@
         android:layout_centerVertical="true"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
+        android:singleLine="true"
         android:text="recycleView的itemText"
         android:textSize="15sp" />
 
